# ZJU-course

./: .gitignore  README.md
BS体系软件设计/: README.md
C小程/: 判断月份if.c  判断月份switch.c
丝绸之路艺术/: ~$12-16.docx  ~$考题.docx  考题.docx
中国改革开放史/: 3210106034 王伟杰 思考题.docx  3210106034 王伟杰 课程论文.docx  课程论文.docx
乒乓球（中级班）/: 乒乓球技术的五要素.docx  运动因拼搏而耀眼.docx
乒乓球（初级班）/: 作业一.docx  作业二.docx  篮球课罗京.docx
信电导论/: 实验报告模板.docx
军训/: 二团七连-军训总结-.docx  二团七连-忆军训.docx  二团七连-拉练见闻-.docx  二团七连-给教官的一封信-.docx  二团七连-记拉练.docx  二团七连——一封家书.docx  二团七连——崇廉铭.docx  二团七连——观阅兵.docx  二团七连——记站军姿.docx  讲座感悟.docx
博弈论/: 把权力关进笼子里.docx  生活中的博弈模型.docx
博弈论基础/: 把权力关进笼子里.docx  生活中的博弈模型.docx
史纲/: 1.期末考试说明.docx  剧本.docx  剧本修改.docx  史纲课程论文.docx  小组报告.docx  小组研讨报告参考.docx  我的剧本.docx  问题研究报告.docx
大学物理实验/: README.md  ~$摆测量重力加速度.docx  声速实验报告.docx  惠斯登电桥.docx  碰撞实验 .docx
大学英语三/: 小王子.docx
大学英语四/: 小作文.docx
大学语文/: 关于耳顺.docx  期末.docx  期末翻译作业.docx
大英三/: Are Chinese centennials.docx  How you say it is more important.docx  Steamed Cold Noodles.docx  pre.pptx  pre口稿.docx
大英四/: Book Review.docx  pre.docx
工程导论/: 2022_1.pptx  设计对象的需求.docx
工高/: 2020级工高班培养方案.doc  个人简历.docx
形势与政策一/: 中美关系挑战及对策：经济.pptx  展示讲稿.docx
形策/: 《发扬传统，勇担使命——在民族复兴征程中“走在前列”》感想.docx  形势与政策.tmp  经济.pptx
思修/: 个人职业规划.docx  志愿服务报告.docx  绿色思考帽.docx  职业兴趣测验报告.html
数值分析/: README.md
计算摄影学/lab/lab7/code/: CMakeLists.txt  Panorama.cpp  Panorama.h  README.txt  hw7_pa.h  main.cpp
面向对象程序设计/project/4_Personal_Diary/: CMakeLists.txt  README.txt  test.sh
面向对象程序设计/project/4_Personal_Diary/src/: diary.cpp  diary.h  pdadd.cpp  pdlist.cpp  pdremove.cpp  pdshow.cpp
(+2666 files in other folders)
